Fix overflow issue for tooltips. Add scroll bar when content exceeds max-height of 150px. Change parent selector for .bar:hover to .ilios-chart.

--- a/app/styles/newcomponents/chart-bar.scss
+++ b/app/styles/newcomponents/chart-bar.scss
@@ -1,4 +1,4 @@
-.chart-container {
+.ilios-chart {
 
   .bar:hover {
     fill: $scheduled-brown;
